<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_24px"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/book_2_24px"
        android:title="@string/library" />
    <item
        android:id="@+id/nav_readers"
        android:icon="@drawable/group_24px"
        android:title="@string/readers"/>
    <item
        android:id="@+id/nav_book_issues"
        android:icon="@drawable/orbit_24px"
        android:title="@string/book_issues"/>
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search_24px"
        android:title="@string/search"/>

</menu>
