<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/obsidian_shadow"
    android:orientation="vertical"
    android:padding="16dp"
    android:scrollbars="vertical"
    tools:context=".ui.SearchFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/readers_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/obsidian_shadow_t10" />

    <!-- Search Input -->
    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/bg_search_input_selector"
        android:drawableStart="@drawable/search_24px"
        android:drawablePadding="12dp"
        android:drawableTint="@color/obsidian_shadow_t10"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/obsidian_shadow_t10"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />


    <!-- Filter Group -->
    <LinearLayout
        android:id="@+id/chk_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="4dp">

        <CheckBox
            android:id="@+id/filter_books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/molten_chestnut"
            android:text="@string/books"
            android:textColor="@color/grey"
            android:checked="true"
            android:layout_marginEnd="8dp" />

        <CheckBox
            android:id="@+id/filter_readers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/molten_chestnut"
            android:checked="true"
            android:text="@string/readers"
            android:textColor="@color/grey" />

        <CheckBox
            android:id="@+id/filter_book_issues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/molten_chestnut"
            android:text="@string/issues"
            android:textColor="@color/grey"
            android:checked="true"
            android:layout_marginEnd="8dp" />
    </LinearLayout>

    <!-- Search Results List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
